--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mikestead.dotenv",
     "ms-azuretools.vscode-docker",
     "ms-python.python",
-    "ms-vscode.Go",
+    "golang.Go",
     "PKief.material-icon-theme",
     "redhat.vscode-yaml",
     "streetsidesoftware.code-spell-checker",
